--- a/mcp251xfd/Makefile
+++ b/mcp251xfd/Makefile
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-only
 
-obj-$(CONFIG_CAN_MCP251XFD) += mcp251xfd.o
+obj-$(CONFIG_CAN_MCP2518) += mcp251xfd.o
 
 mcp251xfd-objs :=
 mcp251xfd-objs += mcp251xfd-core.o
